[project]
name = "mutagen-rag-mcp"
version = "0.1.0"
description = "Mutagen RAG MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "llama-index>=0.10.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "llama-index-embeddings-huggingface>=0.2.0",
    "chromadb>=0.4.0",
    "fastmcp>=2.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mcp-inspector",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

